@@ -18,10 +18,9 @@ package io.airlift.http.server;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import io.airlift.units.Duration;
+import jakarta.validation.constraints.AssertTrue;
 import org.eclipse.jetty.util.ssl.SslContextFactory;
 import org.testng.annotations.Test;
-
-import javax.validation.constraints.AssertTrue;
 
 import java.util.List;
 import java.util.Map;
