@@ -15,9 +15,8 @@
  */
 package io.airlift.testing;
 
+import jakarta.validation.constraints.NotNull;
 import org.testng.annotations.Test;
-
-import javax.validation.constraints.NotNull;
 
 import java.lang.annotation.Annotation;
 
@@ -73,13 +72,13 @@ public class TestValidationAssertions
     @Test
     public void testTheAssertFailsValidationMethodSucceedsWithInvalidObject()
     {
-        assertFailsValidation(INVALID_OBJECT, "value", "may not be null", NotNull.class);
+        assertFailsValidation(INVALID_OBJECT, "value", "must not be null", NotNull.class);
     }
 
     @Test
     public void testTheAssertFailsValidationWithMessageMethodSucceedsWithInvalidObject()
     {
-        assertFailsValidation(INVALID_OBJECT, "value", "may not be null", NotNull.class, MESSAGE);
+        assertFailsValidation(INVALID_OBJECT, "value", "must not be null", NotNull.class, MESSAGE);
     }
 
     @Test
@@ -87,7 +86,7 @@ public class TestValidationAssertions
     {
         boolean ok = false;
         try {
-            assertFailsValidation(VALID_OBJECT, "value", "may not be null", NotNull.class);
+            assertFailsValidation(VALID_OBJECT, "value", "must not be null", NotNull.class);
         }
         catch (AssertionError e) {
             ok = true;
@@ -102,7 +101,7 @@ public class TestValidationAssertions
     {
         boolean ok = false;
         try {
-            assertFailsValidation(VALID_OBJECT, "value", "may not be null", NotNull.class, MESSAGE);
+            assertFailsValidation(VALID_OBJECT, "value", "must not be null", NotNull.class, MESSAGE);
         }
         catch (AssertionError e) {
             ok = true;
