@@ -1,9 +1,8 @@
 package io.airlift.tracing;
 
 import io.airlift.configuration.Config;
-
-import javax.validation.constraints.NotNull;
-import javax.validation.constraints.Pattern;
+import jakarta.validation.constraints.NotNull;
+import jakarta.validation.constraints.Pattern;
 
 public class OpenTelemetryConfig
 {
