@@ -1,3 +1,7 @@
+234
+
+- Move to Jakarta validation API
+
 233
 
 - Move to Jakarta dependencies
